...
    "Asking your iPhone for your trails…" : {

    },
    "Bring your iPhone nearby, with OpenHikes installed, to send your trails over." : {

    },
    "Continue" : {

    },
    "Discard" : {

    },
    "Discard Hike" : {
...
